Fix spacing/formatting for 'top level' context (trying this).

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -587,8 +587,6 @@ summary {
     border-color: gray;
     border-style: dotted;
     border-width: 0px;
-    margin-top: 10px;
-    margin-bottom: 10px;
     padding: 10px;
 }
 
